# l1x-templ-balancer-pool

./: .gitignore  .gitmodules  Cargo.toml  devbox.json  devnet-services-dc.yml  process-compose-devnode.yaml
l1x-conf/: config-contract-address-registry.yaml  drt_node_env.sh  l1x-tools-intf.sh  l1x_devnet_config.toml  l1x_devnet_genesis.json
l1x-conf/scripts/: 011-01-uc-init-xtalk-flow-control.json  011-02-uc-init-source-registry.json  012-01-uc-event-registry-register-new-source.json  012-02-uc-event-registry-get-source-from.json  040-01-deploy-evm-creationCode20.json  043-01-test-evm-pool-getpoolid.json  043-02-test-evm-pool-gettokenlist.json  043-03-test-evm-approve-erc20.json  043-04-test-evm-approve-erc201.json  043-05-test-evm-init-pool.json  043-06-test-evm-join-pool.json  044-01-test-evm-erc20-getbalance-vault.json
l1x-utils/l1x-bpool-conf/: Cargo.toml
l1x-utils/l1x-bpool-conf/src/: main.rs
