[workspace]
members = [
	"l1x-contracts/source_registry",
	"l1x-contracts/xtalk_flow_control",
	"l1x-utils/l1x-bpool-conf",
	"l1x-utils/l1x-evm-provider",
	"l1x-utils/l1x-pool-utility/crates/balancer-v2-rs",
	"l1x-utils/l1x-pool-utility",
]
exclude = [
	"l1x-misc/l1x-rpc"
]

[workspace.package]
authors = ["l1x-team <info@l1x.foundation>"]
edition = "2021"
repository = "https://github.com/L1X-Foundation-VM/l1x-contracts/"

[workspace.dependencies]
borsh = { version = "0.9", features = ["const-generics"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
getrandom = { version = "0.2", features = ["js"] }
bincode = { version = "2.0.0-rc" }
sha2 = "0.9"
base64 = "*"
hex = "0.4"
log = "0.4.20"
clap = "2.33"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
once_cell = { version = "1.18.0" }
thiserror = { version = "1.0" }

# ethers
ethers = { version = "2.0.10", default-features = false, features = ["ipc", "ws", "rustls"] }

# l1x-sdk dependencies
# l1x-sdk = { git = "https://github.com/L1X-Foundation-VM/l1x-templ-sdk.git", package = "l1x-sdk", version = "0.1.1" }
l1x-sdk = { path = "l1x-misc/l1x-sdk/l1x-sdk", package = "l1x-sdk", version = "0.2.1" }

# template workspace local dependencies
l1x-evm-provider = { path = "./l1x-utils/l1x-evm-provider", package = "l1x-evm-provider", version = "0.1.0" }
balancer-v2-rs = { path = "./l1x-utils/l1x-pool-utility/crates/balancer-v2-rs", package = "balancer-v2-rs", version = "0.1.0" }
