[workspace]
members = [
	"l1x-utils/l1x-bpool-conf"
]

[workspace.package]
authors = ["l1x-team <info@l1x.foundation>"]
edition = "2021"
repository = "https://github.com/L1X-Foundation-Consensus/l1x-templ-balancer-pool.git"

[workspace.dependencies]
clap = "2.33"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = "0.4.20"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
