[package]
name = "l1x-bpool-conf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
